Revert "Fixed search and some scrollbars"
This reverts commit 883b71cfd197a2340aa26d1429206459c406e096.

--- a/frontend/src/Css/BookStore-style.css
+++ b/frontend/src/Css/BookStore-style.css
@@ -10,7 +10,7 @@
     flex-direction: column;
     width: -webkit-fill-available;
     height: max-content;
-    overflow-y: hidden;
+    overflow-y: auto;
 }
 
 .StoreTopBar {
@@ -183,6 +183,7 @@
     flex-wrap: wrap;
     width: -webkit-fill-available;
     overflow-y: auto;
+    margin-bottom: 4%;
 }
 
 .ListCategoryContainer {
@@ -193,6 +194,6 @@
     flex-wrap: wrap;
     width: -webkit-fill-available;
     overflow-y: auto;
-    margin-bottom: 21.5%;
+    margin-bottom: 28%;
     margin-top: 2%;
 }
